NFC related tdf#158031 editeng: flatten and simplify the code

No Functional Change intended.
Just some slight optimizing that leads to some nice flattening.

Change-Id: I46d20a56821f218973c728f51575b104e6020500
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158854
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>